[package]
name = "error_code"
version = "0.0.1"
edition = "2018"
publish = false

[dependencies]
kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
tikv_alloc = { path = "../tikv_alloc" }

[dependencies.raft]
git = "https://github.com/Little-Wallace/raft-rs.git"
branch = "msg"
default-features = false
